# Kalman-Filter-in-Rust

./: Cargo.toml  README.org
src/: gh_filter.rs  lib.rs  main.rs  multivariable_kalman_filter.rs  simple_kalman_filter.rs
