[package]
name = "kalman_filters_in_rust"
version = "0.1.0"
edition = "2021"
authors = [ "Rasmus Enevoldsen" ]
readme = "README.org"
license = "GPL-3.0-or-later"


[dependencies]
nalgebra = {version = "0.33.0", default-features = false, features = [ "libm" ]} # linear algebra library
libm = {version = "0.2.11"} # math lib for embedded
approx = {version = "0.5.1"} # approx test for floats
rand = "0.9.0"
rand_distr = "0.5.0"
csv = "1.3.1"
